Button of /individual/insert is correctly aligned
The button for adding new SampleIdentifier now is always aligned
next to the first input field.

--- a/web-app/css/otp.less
+++ b/web-app/css/otp.less
@@ -744,4 +744,7 @@ div.fastqc {
     }
 }
 
-
+/* To have the button for new SampleIdentifiers on /individual/insert correctly aligned */
+input.newSampleIdentifier, div.newSampleIdentifier {
+    display: inline-block
+}
